# LeadAdapter

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml  test-pypi.yml
src/: main.py
src/api/: __init__.py
src/api/dependencies/: __init__.py  container.py
src/api/middleware/: __init__.py  error_handler.py
src/api/routers/: __init__.py  health.py  messages.py
src/application/dtos/: requests.py  responses.py
src/application/mappers/: __init__.py  entity_mapper.py
src/application/ports/: cache_port.py  llm_port.py
src/application/services/: message_scorer.py  prompt_chain_orchestrator.py  quality_gate.py
src/application/services/scoring/: __init__.py  anti_spam_criterion.py  personalization_criterion.py  scoring_criterion.py  tone_criterion.py  (+1 more)
src/application/use_cases/: generate_message.py
src/domain/: __init__.py
src/domain/entities/: __init__.py  lead.py  message.py  playbook.py  sender.py
src/domain/enums/: __init__.py  channel.py  message_strategy.py  seniority.py  sequence_step.py
src/domain/exceptions/: __init__.py  domain_exceptions.py
src/domain/services/: __init__.py  icp_matcher.py  seniority_inferrer.py  strategy_selector.py
src/domain/value_objects/: __init__.py  campaign_history.py  icp_profile.py  product.py  work_experience.py
src/infrastructure/adapters/: memory_cache_adapter.py  openai_adapter.py
src/infrastructure/config/: settings.py
src/infrastructure/prompts/: classify_lead.py  generate_message.py  infer_context.py
tests/: __init__.py  conftest.py
tests/fixtures/: request_email_breakup.json  request_email_follow_up.json  request_linkedin_first_contact.json  sample_requests.json
tests/integration/: __init__.py
tests/unit/: __init__.py  conftest.py
(+2 files in other folders)
